--- a/public/admin.html
+++ b/public/admin.html
@@ -78,6 +78,7 @@
               </button>
               <button class="button" id="btn-export-seats-csv" type="button">导出座位 CSV</button>
               <button class="button" id="btn-export-seats-png" type="button">导出座位 PNG</button>
+              <button class="button" id="btn-export-seats-json" type="button">导出座位 JSON</button>
             </div>
           </div>
 
@@ -226,6 +227,7 @@
                   <button class="button" id="btn-export-project" type="button">项目 JSON</button>
                   <button class="button" id="btn-export-seats-csv" type="button">座位 CSV</button>
                   <button class="button" id="btn-export-seats-png" type="button">座位 PNG</button>
+                  <button class="button" id="btn-export-seats-json" type="button">座位 JSON</button>
                 </div>
               </div>
               <button class="button" id="btn-import-project" type="button">导入项目JSON</button>
