--- a/public/sales.html
+++ b/public/sales.html
@@ -210,6 +210,8 @@
     </main>
 
     <script src="/socket.io/socket.io.js"></script>
+    <!-- jsQR 作为 BarcodeDetector 的回退方案 -->
+    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
     <script src="/js/sales.js" type="module"></script>
   </body>
 </html>
