--- a/public/sales.html
+++ b/public/sales.html
@@ -18,14 +18,45 @@
       </div>
     </header>
 
-    <main class="sales-layout">
-      <nav class="sales-tabs admin-tabs" role="tablist">
-        <button class="sales-tab admin-tab admin-tab--active" type="button" data-module="sales" aria-selected="true">
-          售票
-        </button>
-        <button class="sales-tab admin-tab" type="button" data-module="merch" aria-selected="false">文创售卖</button>
-        <button class="sales-tab admin-tab" type="button" data-module="checkin" aria-selected="false">检票</button>
-      </nav>
+	    <main class="sales-layout">
+	      <nav class="sales-tabs admin-tabs" role="tablist">
+	        <button
+	          class="sales-tab admin-tab admin-tab--active"
+	          type="button"
+	          data-module="sales"
+	          role="tab"
+	          id="tab-sales"
+	          aria-controls="module-sales"
+	          aria-selected="true"
+	          tabindex="0"
+	        >
+	          售票
+	        </button>
+	        <button
+	          class="sales-tab admin-tab"
+	          type="button"
+	          data-module="merch"
+	          role="tab"
+	          id="tab-merch"
+	          aria-controls="module-merch"
+	          aria-selected="false"
+	          tabindex="-1"
+	        >
+	          文创售卖
+	        </button>
+	        <button
+	          class="sales-tab admin-tab"
+	          type="button"
+	          data-module="checkin"
+	          role="tab"
+	          id="tab-checkin"
+	          aria-controls="module-checkin"
+	          aria-selected="false"
+	          tabindex="-1"
+	        >
+	          检票
+	        </button>
+	      </nav>
 
       <section class="panel project-picker" aria-label="选择售票项目">
         <div class="panel__heading">
@@ -34,24 +65,30 @@
             <p class="hint">选择后三个功能都会使用同一项目数据。</p>
           </div>
           <div class="project-picker__actions">
-            <select id="project-select"></select>
+            <label class="visually-hidden" for="project-select">选择项目</label>
+            <select id="project-select" aria-label="选择项目" title="选择项目"></select>
             <button class="button" id="btn-refresh-projects" type="button">刷新项目</button>
           </div>
         </div>
       </section>
 
-      <section class="module module--sales panel panel--module" id="module-sales">
+	      <section
+	        class="module module--sales panel panel--module"
+	        id="module-sales"
+	        role="tabpanel"
+	        aria-labelledby="tab-sales"
+	      >
         <div class="module-sales-grid">
           <div class="module-sales-left">
             <div class="panel">
-              <div class="panel__heading"><h2>售票</h2></div>
-              <div class="legend">
-                <span><span class="seat-badge" style="background:#2b8a3e"></span> 可售座位</span>
-                <span><span class="seat-badge" style="background:#ffd166"></span> 本机已锁定</span>
-                <span><span class="seat-badge" style="background:#cbd3de"></span> 他机锁定中</span>
-                <span><span class="seat-badge" style="background:#ffffff;border:1px solid #d8e2f1"></span> 已签发</span>
-                <span><span class="seat-badge" style="background:#d7deeb"></span> 未启用</span>
-              </div>
+	              <div class="panel__heading"><h2>售票</h2></div>
+	              <div class="legend">
+	                <span><span class="seat-badge seat-badge--available"></span> 可售座位</span>
+	                <span><span class="seat-badge seat-badge--locked-self"></span> 本机已锁定</span>
+	                <span><span class="seat-badge seat-badge--locked-other"></span> 他机锁定中</span>
+	                <span><span class="seat-badge seat-badge--sold"></span> 已签发</span>
+	                <span><span class="seat-badge seat-badge--disabled"></span> 未启用</span>
+	              </div>
               <div class="zone-summary">
                 <h4>按票价余票</h4>
                 <ul id="sales-zone-summary-list"></ul>
@@ -59,11 +96,11 @@
               <div class="auto-select">
                 <label>
                   选择价位
-                  <select id="auto-select-price"></select>
+                  <select id="auto-select-price" aria-label="选择价位" title="选择价位"></select>
                 </label>
                 <label>
                   选座人数
-                  <select id="auto-select-count">
+                  <select id="auto-select-count" aria-label="选座人数" title="选座人数">
                     <option value="1">1 人</option>
                     <option value="2">2 人</option>
                     <option value="3">3 人</option>
@@ -94,16 +131,55 @@
               <span>数量：<strong id="selected-count">0</strong></span>
               <span>合计：<strong id="selected-total">¥0</strong></span>
             </div>
-            <div class="selected-actions">
-              <button class="button button--link" id="btn-clear-selected" type="button">清空已选座位</button>
-            </div>
-            <p class="status-message" id="sales-status"></p>
-            <div class="panel">
+	            <div class="selected-actions">
+	              <button class="button button--link" id="btn-clear-selected" type="button">清空已选座位</button>
+	            </div>
+	            <div class="panel panel--subtle" id="ticket-coupon-panel">
+	              <div class="panel__heading">
+	                <div>
+	                  <h3>优惠券</h3>
+	                  <p class="hint">管理员签发优惠券后，售票员可在签发座位时使用（支持限制票价/票数）。</p>
+	                </div>
+	                <button class="button button--secondary" id="btn-scan-ticket-coupon" type="button">扫码/输入</button>
+	              </div>
+	              <label>
+	                优惠券码
+	                <input id="input-ticket-coupon" type="text" placeholder="扫描/输入优惠券条码" />
+	              </label>
+	              <div class="panel__actions">
+	                <button class="button" id="btn-lookup-ticket-coupon" type="button">查询</button>
+	                <button class="button button--secondary" id="btn-clear-ticket-coupon" type="button">清除</button>
+	              </div>
+	              <div class="hint" id="ticket-coupon-info">未使用优惠券。</div>
+	            </div>
+	            <p class="status-message" id="sales-status"></p>
+	            <div class="panel">
               <h3>签发与扫码</h3>
               <div class="scan-area">
-                <video id="scan-video" autoplay playsinline muted></video>
+                <video id="scan-video" autoplay muted></video>
                 <div id="scan-overlay" class="scan-overlay">等待签发指令...</div>
                 <canvas id="scan-canvas" class="hidden"></canvas>
+              </div>
+              <div id="issue-scan-methods" class="scan-methods" aria-label="扫码方式"></div>
+              <div class="scan-help" id="issue-https-help" hidden>
+                <div class="scan-help__row">
+                  <strong>摄像头扫码需要 HTTPS</strong>
+                  <div class="scan-help__actions">
+                    <button class="button button--secondary" id="btn-copy-issue-https" type="button">
+                      复制 HTTPS 链接
+                    </button>
+                    <button class="button" id="btn-open-issue-https" type="button">打开 HTTPS</button>
+                  </div>
+                </div>
+                <div class="scan-help__url"><code id="issue-https-url"></code></div>
+                <ol class="scan-help__steps">
+                  <li>点击“打开 HTTPS”进入安全链接。</li>
+                  <li>若提示证书不受信任：继续访问并信任证书（iOS 需在设置中启用证书信任）。</li>
+                  <li>回到本页允许摄像头权限，再开始扫码。</li>
+                </ol>
+                <p class="hint scan-help__hint">
+                  提示：如仍提示不安全，请先在浏览器中继续访问/信任证书；无法扫码时可改用手动输入或“上传二维码图片”。
+                </p>
               </div>
               <p class="hint">
                 * 点击列表中的“签发”按钮后开始扫描票面上的二维码，正确匹配后座位将自动标记为“已签发”。
@@ -113,14 +189,27 @@
                   手动票码验证
                   <input id="manual-ticket-code" type="text" placeholder="输入票码并确认" />
                 </label>
+                <label>
+                  上传二维码图片（本地扫码）
+                  <input id="issue-upload-file" type="file" accept="image/*" />
+                </label>
                 <button class="button" id="btn-manual-confirm" type="button">确认签发</button>
+                <button class="button button--secondary" id="btn-issue-upload-scan" type="button">
+                  识别二维码并签发
+                </button>
               </div>
             </div>
           </aside>
         </div>
       </section>
 
-      <section class="panel panel--module panel--merch-shop" id="module-merch" hidden>
+	      <section
+	        class="panel panel--module panel--merch-shop"
+	        id="module-merch"
+	        role="tabpanel"
+	        aria-labelledby="tab-merch"
+	        hidden
+	      >
         <div class="panel__heading">
           <div>
             <h2>文创售卖</h2>
@@ -135,12 +224,33 @@
             <ul id="merch-cart-list" class="selected-list"></ul>
             <label>
               结账模式
-              <select id="merch-checkout-mode"></select>
+              <select id="merch-checkout-mode" aria-label="结账模式" title="结账模式"></select>
             </label>
             <label>
               支付方式
-              <select id="merch-payment-method"></select>
+              <select id="merch-payment-method" aria-label="支付方式" title="支付方式"></select>
             </label>
+            <label>
+              订单类型
+              <select id="merch-fulfillment-type" aria-label="订单类型" title="订单类型">
+                <option value="stock">现货</option>
+                <option value="presale">预售（预购券）</option>
+              </select>
+            </label>
+            <div id="merch-presale-panel" class="panel panel--subtle" hidden>
+              <div class="panel__heading">
+                <div>
+                  <strong>预购券条码</strong>
+                  <p class="hint">预售订单需要绑定一张唯一预购券，核销后不可重复使用。</p>
+                </div>
+                <button class="button button--secondary" id="btn-scan-presale-code" type="button">扫码/输入</button>
+              </div>
+              <label>
+                预购券码
+                <input id="input-presale-code" type="text" placeholder="扫描/输入卡片条码" />
+              </label>
+              <p class="hint">提示：若摄像头扫码不可用，可点击“扫码/输入”使用上传图片或手动输入。</p>
+            </div>
             <label>
               备注
               <input id="input-merch-note" type="text" placeholder="可选" />
@@ -152,11 +262,69 @@
               提交文创订单
             </button>
             <p class="status-message" id="merch-status"></p>
+            <div class="panel panel--subtle" id="merch-redeem-panel">
+              <div class="panel__heading">
+                <div>
+                  <strong>预购券核销</strong>
+                  <p class="hint">扫码查看预售商品信息并核销出库（会扣减库存）。</p>
+                </div>
+                <button class="button button--secondary" id="btn-scan-redeem-code" type="button">扫码/输入</button>
+              </div>
+              <label>
+                预购券码
+                <input id="input-redeem-code" type="text" placeholder="扫描/输入预购券条码" />
+              </label>
+              <div class="panel__actions">
+                <button class="button" id="btn-lookup-voucher" type="button">查询</button>
+                <button class="button button--primary" id="btn-redeem-voucher" type="button" disabled>核销</button>
+              </div>
+              <div class="hint" id="redeem-voucher-info">暂无预购券信息。</div>
+            </div>
           </div>
         </div>
       </section>
 
-      <section class="panel panel--module panel--checkin" id="module-checkin" hidden>
+      <dialog id="dialog-voucher-scan" class="modal">
+        <div class="modal__content">
+          <div>
+            <h3 id="voucher-scan-title">扫码</h3>
+            <p class="hint" id="voucher-scan-hint">可使用摄像头扫码，或上传条码图片/手动输入。</p>
+          </div>
+          <div class="scan-area scan-area--checkin">
+            <video id="voucher-scan-video" autoplay muted></video>
+            <div id="voucher-scan-overlay" class="scan-overlay">等待扫码...</div>
+            <canvas id="voucher-scan-canvas" class="hidden"></canvas>
+          </div>
+          <div id="voucher-scan-methods" class="scan-methods scan-methods--modal" aria-label="扫码方式"></div>
+          <div class="form">
+            <label>
+              上传条码图片（本地扫码）
+              <input id="voucher-scan-upload-file" type="file" accept="image/*" />
+            </label>
+            <div class="panel__actions">
+              <button class="button" id="btn-voucher-scan-start" type="button">开始摄像头扫码</button>
+              <button class="button" id="btn-voucher-scan-stop" type="button">停止扫码</button>
+              <button class="button button--secondary" id="btn-voucher-upload-scan" type="button">识别图片</button>
+            </div>
+            <label>
+              手动输入
+              <input id="voucher-scan-manual" type="text" placeholder="输入条码后回车或点击使用" />
+            </label>
+          </div>
+          <div class="modal__actions">
+            <button class="button" id="btn-voucher-use" type="button">使用此码</button>
+            <button class="button button--secondary" id="btn-voucher-close" type="button">关闭</button>
+          </div>
+        </div>
+      </dialog>
+
+	      <section
+	        class="panel panel--module panel--checkin"
+	        id="module-checkin"
+	        role="tabpanel"
+	        aria-labelledby="tab-checkin"
+	        hidden
+	      >
         <div class="panel__heading">
           <div>
             <h2>检票</h2>
@@ -172,16 +340,42 @@
         <div class="checkin-grid">
           <div class="checkin-visual">
             <div class="scan-area scan-area--checkin">
-              <video id="checkin-video" autoplay playsinline muted></video>
+              <video id="checkin-video" autoplay muted></video>
               <div id="checkin-overlay" class="scan-overlay">等待检票...</div>
               <canvas id="checkin-canvas" class="hidden"></canvas>
+            </div>
+            <div id="checkin-scan-methods" class="scan-methods" aria-label="扫码方式"></div>
+            <div class="scan-help" id="checkin-https-help" hidden>
+              <div class="scan-help__row">
+                <strong>摄像头扫码需要 HTTPS</strong>
+                <div class="scan-help__actions">
+                  <button class="button button--secondary" id="btn-copy-checkin-https" type="button">复制 HTTPS 链接</button>
+                  <button class="button" id="btn-open-checkin-https" type="button">打开 HTTPS</button>
+                </div>
+              </div>
+              <div class="scan-help__url"><code id="checkin-https-url"></code></div>
+              <ol class="scan-help__steps">
+                <li>点击“打开 HTTPS”进入安全链接。</li>
+                <li>若提示证书不受信任：继续访问并信任证书（iOS 需在设置中启用证书信任）。</li>
+                <li>回到本页允许摄像头权限，再开始扫码。</li>
+              </ol>
+              <p class="hint scan-help__hint">
+                提示：如仍提示不安全，请先在浏览器中继续访问/信任证书；无法扫码时可改用手动输入或“上传二维码图片”。
+              </p>
             </div>
             <div class="form">
               <label>
                 手动检票
                 <input id="input-checkin-code" type="text" placeholder="输入票号后回车或点击检票" />
               </label>
+              <label>
+                上传二维码图片（本地扫码）
+                <input id="checkin-upload-file" type="file" accept="image/*" />
+              </label>
               <button class="button button--primary" id="btn-submit-checkin" type="button">检票</button>
+              <button class="button button--secondary" id="btn-checkin-upload-scan" type="button">
+                识别并检票
+              </button>
             </div>
             <div id="checkin-result" class="checkin-result">等待检票...</div>
             <div class="panel">
@@ -209,9 +403,11 @@
       </section>
     </main>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <!-- jsQR 作为 BarcodeDetector 的回退方案 -->
-    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
-    <script src="/js/sales.js" type="module"></script>
-  </body>
-</html>
+	    <script src="/socket.io/socket.io.js"></script>
+	    <!-- jsQR 作为 BarcodeDetector 的回退方案 -->
+	    <script src="/js/vendor/jsQR.js"></script>
+	    <!-- ZXing 作为 PDF417/条码兜底（用于“上传图片识别”等场景） -->
+	    <script src="/js/vendor/zxing.min.js"></script>
+	    <script src="/js/sales.js" type="module"></script>
+	  </body>
+	</html>
